test/fail/macro-inside-macro.rnp
macro a() {
  macro b() {}
}
---
 --> fail/macro-inside-macro.rnp:2:3
  |
2 |   macro b() {}
  |   ^^^^^ Cannot declare macro inside macro
  |
